Hide .share_submission blocks. Moved webkit-scrollbar to common.css.

--- a/assets/basic/common.css
+++ b/assets/basic/common.css
@@ -16,9 +16,11 @@ details>time{display:none}
 /* disable nav */
 menu{display:none}
 
-/* remove some obnoxious ad blocks */
+/* hide some obnoxious advertisement and social blocks */
+.share_submission{display:none}
 .cta{display: none}
 iframe{display:none}
+
 
 /* popup overlay */
 aside {position:fixed;top:0;bottom:0;left:0;right:0;background:rgba(0, 0, 0, 0.7);transition:opacity 500ms;visibility:hidden;opacity:0}
@@ -27,3 +29,5 @@ aside:target{visibility:visible;opacity:1}
 .popup .close {position:absolute;top:20px;right:30px;transition:all 200ms;font-size:30px;font-weight:bold;text-decoration:none;color:#333}
 .popup .close:hover {color:#dc322f}
 .popup .content {max-height:30%;overflow:auto}
+
+::-webkit-scrollbar{height: 1px; width:3px}
