--- a/assets/theme/slash.css
+++ b/assets/theme/slash.css
@@ -1,5 +1,5 @@
 body>footer{border-right:3px solid;border-left:3px solid;width:90%;margin:0 auto 10px;padding:2px 0;text-align:center}
-body>header{border-right:3px solid;border-left:3px solid;width:90%;margin:10px auto 0;border-top:5px solid;border-radius:30px 30px 0 0;text-align:center}
+body>header{border:3px solid;width:90%;margin:10px auto 0;border-radius:30px 30px 0 0;text-align:center}
 body>main{border-right:3px solid;border-left:3px solid;width:90%;margin:3px auto;padding:5px 0}
 h1{margin-left:10px;margin-block-start:3px;margin-block-end:3px;padding-bottom:4px} .hi {display:none}
 section{margin:0 auto 10px auto;width:80%}
